# Computational_Biomedicine_Study_Hub

./: .gitignore  README.md  ci_dm857_04_06_diagnostics.txt  ci_dm857_07_09_diagnostics.txt  ci_dm857_m03_diagnostics.txt  ci_dm857_m10_m12_diagnostics.txt  ci_dm857_m10_m12_final.txt  ci_dm857_m10_m12_focused.txt  ci_dm857_m10_m12_ruff.txt  ci_dm857_test_file_status.txt  ci_language_switcher_diagnostics.txt  ci_lazy_reader_mypy.txt  pyproject.toml
.generation/: module_01_bank.part00  module_01_bank.part01  module_01_localized.part00  module_01_localized.part01  module_01_localized.part02  module_01_localized.part03
.github/: dm857_source_hashes.txt  module13_mypy_diagnostic.txt  module13_pytest_diagnostic.txt  module13_ruff_diagnostic.txt  module13_validation_diagnostic.txt
.github/dm847_payload/: part00  part01  part02  part03  part04  part05  part06
.github/dm857_payload/: m13_01.txt  m13_02.txt  m13_03.txt
.github/dm857_source/: m13_01.part  m13_02.part  m13_03_1.part  m13_03_2.part  m13_04_1.part  m13_04_2.part
.github/workflows/: assemble_dm857_localization.yml  diagnose-dm847.yml  diagnose-dm857-07-09.yml  diagnose-dm857-module-14.yml  diagnose-language-switcher.yml  diagnose-module13-lint.yml  diagnose-module13-mypy.yml  diagnose-module13-pytest.yml  diagnose_dm857_modules_04_06.yml  fix-module13-lint.yml  (+24 more)
docs/: academic_functional_audit.md  academic_ui_redesign.md  content_audit_report.md  course_coverage_matrix.md  internationalization.md  learning_engine_architecture.md  semester_1_integration_report.md
scripts/: normalize_semester_1_yaml.py
tests/: test_academic_catalog.py  test_academic_content.py  test_academic_ui_design.py  test_activity_renderers.py  test_application.py  test_assessment_identity.py  test_assessment_session.py  test_cloze_choice.py  test_compact_course_toolbar.py  test_course_catalog.py  test_course_navigation.py  test_dm847_core_modules.py  test_dm847_lazy_loading.py  test_dm847_module_01_content.py  test_dm857_lazy_loading.py  test_dm857_module_01_content.py  test_dm857_module_01_localization.py  test_dm857_module_02_content.py  test_dm857_module_03_content.py  test_dm857_module_13_content.py  test_dm857_module_13_registration.py  test_dm857_module_14_content.py  test_dm857_module_14_registration.py  test_dm857_module_catalog.py  test_dm857_module_reader.py  test_dm857_modules_04_06_content.py  test_dm857_modules_07_09_content.py  test_dm857_modules_07_09_starter_code.py  test_dm857_modules_10_12_content.py  test_global_learning_pages.py  test_guided_practice.py  test_i18n_core.py  test_language_switcher.py  test_learning_progress_ui.py  test_learning_taxonomy.py  test_localized_academic_models.py  test_module_bundles.py  test_navigation.py  test_objective_assessment.py  test_ollama_chat.py  (+10 more)
(+255 files in other folders)
